# C-Lehren

./: README.md  a.out  hello  hello.cpp  main  main.cpp  main2.cpp  pointer_lehren  pointer_lehren.cpp  test  test.cpp  test2  test2.cpp  uniq_pt.cpp  virtual_destructor.cpp
Cmake_lehren/: CMakeLists.txt
Cmake_lehren/src/: my_lib.c
coverity_output/: BUILD.metrics.xml  build-cwd.txt  build-id.txt  build-log.txt  build-timings.txt  security-da-log.txt  security-da-timings.txt  tu-timings.txt
coverity_output/emit/MSI/: emit-db
coverity_output/output/: ANALYSIS.metrics.xml  analysis-log.txt  analysis-settings.json  collectable_analysis_metrics  emit-db-cache  incdb  issueTypes.json  models  models.events  stats  summary.txt  timing.txt
coverity_output/output/exported-summaries/: summaries
coverity_output/output/key-value-stores/: metrics  unique-tu-symbols
coverity_output/tmp/: emit-db-cache
report.html/: index.xml  summary.xml
sequence_manager/: Object.hpp  SequenceItem.cpp  SequenceItem.hpp  SequenceManager.hpp  main.cpp  massif.out.131539  myapp
